--- a/gb/20/3/6/n11920637.md
+++ b/gb/20/3/6/n11920637.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>时欣：柏林墙倒塌之前 没人相信它会倒塌</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/GettyImages-1181088859-600x400.jpg" />
 <h6>柏林墙倒塌30周年，美欧政要聚集柏林，美国总统川普特发文纪念，建立“没有共产主义罪恶”的未来。（大纪元合成）
 </h6>
 <hr>
-<p>【大纪元2020年03月06日讯】一九八九年十一月九日之前，<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%9F%8F%E6%9E%97%E5%A2%99.md#1">柏林墙</a>看上去依然坚固，这一年的十月七日东德为建国四十周年举行了豪华阅兵仪式，而在前一年的汉城奥运会上，东德队勇夺奖牌第二名。</p>
+	<p>【大纪元2020年03月06日讯】一九八九年十一月九日之前，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9F%8F%E6%9E%97%E5%A2%99.md#1">柏林墙</a>看上去依然坚固，这一年的十月七日东德为建国四十周年举行了豪华阅兵仪式，而在前一年的汉城奥运会上，东德队勇夺奖牌第二名。</p>
 <p>但当东德时任领导人昂纳克为了阅兵式逮捕了一千多名示威者时，前来观礼的前苏共书记戈尔巴乔夫都坐不住了，他对昂纳克说：“谁迟到了，生活就会惩罚他。”两天后，东德的莱比锡市爆发示威游行，九天后77岁的昂纳克被迫下台。</p>
-<p>隔断自由世界的<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%9F%8F%E6%9E%97%E5%A2%99.md#1">柏林墙</a>终于倒塌，因为它自己不堪重负了。</p>
+<p>隔断自由世界的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%9F%8F%E6%9E%97%E5%A2%99.md#1">柏林墙</a>终于倒塌，因为它自己不堪重负了。</p>
 <p>它看上去曾如此坚固，如此难以逾越，有许多人为了翻越这堵高墙而付出生命的代价。一九六一年东德开始修建的柏林墙，全长169.5公里，平均高4.2米，厚50厘米，封死了192条街道，外围是3.5米高的通电铁丝网，铁丝网与柏林墙之间还有50～100米的无人地带。柏林墙四周都是碉堡、瞭望塔以及日夜值守的荷枪实弹的士兵。</p>
 <p>柏林墙倒塌之前，没有人相信它会倒下。它倒下之后，没有人相信它居然能那么长久地立在那里。</p>
 <p>这就像苏联，解体之前没人想到这个庞然大物会倒下，解体之后也很难相信曾给苏联人民带来巨大灾难的斯大林政权能影响如此深远。人们开始反思，开始揭开历史真相，开始重新认识历史，即使有很多令他们震惊的片段是他们不愿意看到的，因为人本能地不愿意相信自己被欺骗。</p>
@@ -21,52 +21,50 @@
 <p>这次疫情中，在明知“人传人”的情况下，国家卫健委一月三日的一纸文件能终止核酸检测，无异于草菅人命。</p>
 <p>这种集权独裁并不是强大的标志，反而是危险的根源。正像柏林墙倒塌一个多星期后，接任东德国防部长的霍夫曼所说：“柏林墙对东德来讲并不是强大的标志，而是比较弱小的证明”，“这堵墙给人们带来了痛苦”。或许，正是因为其本质虚弱，才更需要用强大的暴力与谎言来维护。</p>
 <p>柏林墙的倒塌、苏联的解体，貌似历史的偶然，但却有它的逻辑，这就是人心所向。在柏林墙倒塌之前，在东德有无数的被压制的集会，人们小心地但也在不断地突破着政府的底线。在苏联解体之前，索尔仁尼琴等作家就撰写了震惊世界的《古拉格群岛》，揭露斯大林时代的罪恶。</p>
-<p>中国尽管<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E7%A6%81%E6%AD%A2%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">禁止言论自由</a>，但人们或亲身经历，或耳闻目睹，或<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E7%BF%BB%E5%A2%99%E4%B8%8A%E7%BD%91.md#1">翻墙上网</a>，亦能了解到真实的世界，看清中共的腐败与无能、谎言与邪恶，至今已有三亿五千万人选择退出中共党团队组织。</p>
+<p>中国尽管<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%A6%81%E6%AD%A2%E8%A8%80%E8%AE%BA%E8%87%AA%E7%94%B1.md#1">禁止言论自由</a>，但人们或亲身经历，或耳闻目睹，或<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BF%BB%E5%A2%99%E4%B8%8A%E7%BD%91.md#1">翻墙上网</a>，亦能了解到真实的世界，看清中共的腐败与无能、谎言与邪恶，至今已有三亿五千万人选择退出中共党团队组织。</p>
 <p>一位化名“暖风”的人二月二十五日在大纪元网站上发表退党声明时说：“柏林墙终会有倒塌的那天，只要我们每个人发出一点声音作出一点努力，就可以早日迎来黎明！”</p>
 <p>——转自明慧网</p>
 <p>责任编辑：莆山◇</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/11/28/n11688272.md#1">95后海归留学生为何选择逃离中国？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/11/10/n11645858.md#1">德国人忆柏林墙倒塌时刻 鼓励港人争取自由</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/11/8/n11642910.md#1">“开枪还是不开枪”推倒柏林墙的烛光大游行</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/11/9/n11644853.md#1">反思历史 柏林墙和社会主义带来的罪恶</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/11/6/n11637878.md#1">柏林墙倒塌30年 专家：中共暴政亦必亡</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/10/11/n11581843.md#1">柏林墙倒塌30年 再揭东德假英雄谎言</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/10/11/n11581843.md#1">柏林墙倒塌30年 再揭东德假英雄谎言</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/11/6/n11637878.md#1">柏林墙倒塌30年 专家：中共暴政亦必亡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/11/8/n11642910.md#1">“开枪还是不开枪”推倒柏林墙的烛光大游行</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/11/9/n11644853.md#1">反思历史 柏林墙和社会主义带来的罪恶</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/11/9/n11644550.md#1">【新闻看点】柏林墙倒30年 中共红墙在崩坍</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/11/9/n11644586.md#1">十万人露天晚会掀高潮 庆柏林墙倒塌30年</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/1/n10885699.md#1" target="_blank">陆文：生与死的抉择</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/10/n4570585.md#1" target="_blank">四川老人两次重伤不治痊愈</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/3/n10112268.md#1" target="_blank">林辉：红色公主的大字报让军报少将家破人亡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/10/n11375488.md#1" target="_blank">冤狱11年半 前大陆律师堂堂正正反迫害 ?</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11945922.md#1">【拍案惊奇】武汉肺炎病毒被曝恐有夺命亚型</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947234.md#1">【直播回放】3.17新肺炎追踪：中美外交战</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/6/n11920637.htm">时欣：柏林墙倒塌之前 没人相信它会倒塌</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/6/n11920637.htm">时欣：柏林墙倒塌之前 没人相信它会倒塌</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/20/3/6/n11920637.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/3/6/n11920637.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
